# lameboy

./: .gitignore  Cargo.toml  LICENSE  PATCH-NOTES.md  README.md  lameboy.ini.example  xtrn.ini.example
.github/: package.sh
.github/workflows/: ci.yml  release.yml
src/: ansi_music.rs  apc_audio.rs  audio.rs  color.rs  config.rs  cp437.rs  door32.rs  framebuffer.rs  input.rs  keys.rs  main.rs  menu.rs  out.rs  renderer.rs  save.rs  splash.rs  term.rs
