[package]
name = "terminal_gameboy"
version = "0.1.2"
edition = "2021"
authors = ["Dillon Quigley <dillonmquigley@gmail.com>"]
description = "A terminal-based Game Boy emulator with ASCII and block rendering modes"
license = "MIT"
repository = "https://github.com/dquigles/terminal_gameboy"
readme = "README.md"
keywords = ["gameboy", "emulator", "terminal", "ascii", "retro"]
categories = ["command-line-utilities", "emulators", "games"]

# Exclude ROMs and saves from the published crate
exclude = ["roms/", ".saves/"]

[dependencies]
crossterm = "0.27"
# Vendored + patched to expose APU pulse-channel state for the ANSI-music engine.
# See vendor/gameboy_core/PATCH-NOTES.md.
gameboy_core = { path = "vendor/gameboy_core" }
# Local sound-card playback. Optional and OFF by default: a BBS door never plays
# to a local device (it streams ANSI/APC audio to the caller), and omitting rodio
# keeps the binary pure-Rust with no native audio dependency (no libasound2) —
# which is what lets release CI cross-compile for every target. Build with
# `--features localaudio` for real audio when running locally.
rodio = { version = "0.19", optional = true }

[features]
default = []
localaudio = ["dep:rodio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1  # Better inlining across crates
panic = "abort"    # Smaller binary, less overhead
